[package]
name = "smooth-river-stones"
version = "0.1.0"
edition = "2018"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
yew = "0.18"
pest = "2"
pest_derive = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = "*"
nom = "7"
lalrpop-util = "0.19.6"
regex = "1"

[dependencies.web-sys]
version = "0.3"
features = ["Request"]